--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-electorn",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/electron/main.js",
   "scripts": {
     "make": "electron-forge make",
     "package": "electron-forge package",
@@ -24,6 +24,7 @@
     "electron": "^34.1.0"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "electron-squirrel-startup": "^1.0.1",
+    "web-worker": "^1.5.0"
   }
 }
