--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "test-electorn",
+  "name": "neutron",
   "version": "1.0.0",
   "description": "",
   "main": "src/electron/main.js",
   "scripts": {
-    "make": "electron-forge make",
-    "package": "electron-forge package",
-    "start": "electron-forge start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "browser:build": "webpack --config webpack/webpack.config.prd.js",
+    "browser:start": "webpack-dev-server --config webpack/webpack.config.dev.js",
+    "electron:make": "electron-forge make",
+    "electron:package": "electron-forge package",
+    "electron:start": "electron-forge start --inspect-electron",
+    "make": " NODE_ENV=production npm-run-all --sequential browser:build electron:make",
+    "package": " NODE_ENV=production npm-run-all --sequential browser:build electron:package",
+    "start": "NODE_ENV=development npm-run-all --parallel browser:start electron:start"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.26.8",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.26.8",
+    "@babel/preset-env": "^7.26.8",
+    "@babel/preset-react": "^7.26.3",
     "@electron-forge/cli": "^7.6.1",
     "@electron-forge/maker-deb": "^7.6.1",
     "@electron-forge/maker-rpm": "^7.6.1",
@@ -21,10 +30,37 @@
     "@electron-forge/plugin-fuses": "^7.6.1",
     "@electron-forge/publisher-github": "^7.6.1",
     "@electron/fuses": "^1.8.0",
-    "electron": "^32.0.0"
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "babel-loader": "^9.2.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^7.1.2",
+    "cssnano": "^7.0.6",
+    "electron": "^32.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "npm-run-all": "^4.1.5",
+    "postcss-import": "^16.1.0",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^10.1.3",
+    "raw-loader": "^4.0.2",
+    "react-refresh": "^0.16.0",
+    "sass": "^1.84.0",
+    "sass-loader": "^16.0.4",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
+    "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "classnames": "^2.5.1",
     "electron-squirrel-startup": "^1.0.1",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
+    "react": "^19.0.0",
+    "react-baby-form": "^1.8.0",
+    "react-dom": "^19.0.0",
     "web-worker": "^1.5.0"
   }
 }
