--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "neutron",
   "version": "1.0.0",
-  "description": "",
+  "authors": "",
+  "description": "Electron for CodeWave",
   "main": "src/electron/main.js",
   "scripts": {
     "browser:build": "webpack --config webpack/webpack.config.prd.js",
@@ -13,7 +14,7 @@
     "package": " NODE_ENV=production npm-run-all --sequential browser:build electron:package",
     "start": "NODE_ENV=development npm-run-all --parallel browser:start electron:start"
   },
-  "author": "",
+  "author": "XiaoshuangLi",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.26.8",
