--- a/package.json
+++ b/package.json
@@ -36,36 +36,36 @@
     "@electron/fuses": "^1.8.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "babel-loader": "^9.2.1",
+    "classnames": "^2.5.1",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "cssnano": "^7.0.6",
     "electron": "^32.0.0",
+    "electron-squirrel-startup": "^1.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "npm-run-all": "^4.1.5",
     "postcss-import": "^16.1.0",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.1.3",
+    "prop-types": "^15.8.1",
     "raw-loader": "^4.0.2",
+    "react": "^19.0.0",
+    "react-baby-form": "^1.8.0",
+    "react-dom": "^19.0.0",
     "react-refresh": "^0.16.0",
     "sass": "^1.84.0",
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
+    "web-worker": "^1.5.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "classnames": "^2.5.1",
-    "electron-squirrel-startup": "^1.0.1",
     "lodash": "^4.17.21",
-    "prop-types": "^15.8.1",
-    "react": "^19.0.0",
-    "react-baby-form": "^1.8.0",
-    "react-dom": "^19.0.0",
-    "web-worker": "^1.5.0"
+    "npm": "^10.9.2"
   }
 }
