--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,9 @@ name: build
 
 on: push
 
+permissions:
+  contents: write
+
 jobs:
   build-for-normal:
     runs-on: ${{ matrix.os }}
@@ -40,6 +43,8 @@ jobs:
     steps:
       - name: Checkout from neutron
         uses: actions/checkout@v4
+        with:
+          lfs: true
 
       - name: Setup Node 20.10.0
         uses: actions/setup-node@v4
