--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build@${{ matrix.os }}
-          path: out
+          path: out/make
 
   build-for-macos-intel:
     runs-on: ${{ matrix.os }}
@@ -61,4 +61,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build@${{ matrix.os }}@intel
-          path: out
+          path: out/make
