chore: 🤖 支持 MacOS x64 构建 2.0

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,7 +111,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [macos-15-large]
 
     steps:
       - name: Checkout from neutron
